--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -12,12 +12,14 @@
 <div class="container">
   <div class="row"></div>
 <div class="col-lg-12 text-center">
+  <div class="pagenotfound">
   <h2>
     Page Not Found
   </h1>
-  <a href="{{ routes.all_products_collection_url }}" class="btn-green btn-custom">
-    {{ 'general.continue_shopping' | t }}
+  <a href="{{ routes.root_url }}" class="btn-green btn-custom">
+   <span>Home</span>
   </a>
+</div>
 </div>
 </div>
 </div>
