--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -12,10 +12,10 @@
   </div>
   {%- if search.performed and search.results.size > 0 -%}
     {% paginate search.results by 24 %}
-      <div class="template-search__results page-width">
-        <ul class="row" role="list">
+      <div class=" container    template-search__results page-width">
+        <div class="row" role="list">
           {%- for item in search.results -%}
-            <li class="col-lg-3">
+            <div class="col-lg-3">
               {%- case item.object_type -%}
                 {%- when 'product' -%}
                   {%- capture product_settings -%}{%- if section.settings.product_show_vendor -%}vendor,{%- endif -%}title,price{%- endcapture -%}
@@ -28,7 +28,7 @@
                     show_image_outline: section.settings.show_image_outline
                   %}
                 {%- when 'article' -%}
-                  <a href="{{ item.url }}" class="card-wrapper">
+                 
                     <div class="card card--search card--soft{% unless item.image %} card--text-only{% endunless %}">
                       <div class="card__inner">
                         {%- if item.image -%}
@@ -41,6 +41,7 @@
                                 {%- if item.image.src.width >= 940 -%}{{ item.image.src | img_url: '940x' }} 940w,{%- endif -%}
                                 {%- if item.image.src.width >= 1065 -%}{{ item.image.src | img_url: '1065x' }} 1065w{%- endif -%}"
                               src="{{ item.image.src | img_url: '940x' }}"
+                              class="img-fluid"
                               loading="lazy"
                               sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 130 | divided_by: 4 }}px, (min-width: 990px) calc((100vw - 130px) / 4), (min-width: 750px) calc((100vw - 120px) / 3), calc((100vw - 35px) / 2)"
                               width="{{ item.image.src.width }}"
@@ -50,7 +51,7 @@
                           </div>
                         {%- endif -%}
                         <div class="card__content">
-                          <h2 class="card__text h3">{{ item.title | truncate: 50 | escape }}</h2>
+                          <span class="card-information__text h5">{{ item.title | truncate: 50 | escape }}</span>
                           <div class="card-article-info caption-with-letter-spacing h5">
                             {%- if section.settings.article_show_date -%}
                               <span class="circle-divider">{{ item.published_at | time_tag: format: 'month_year' }}</span>
@@ -59,30 +60,47 @@
                               <span>{{ item.author }}</span>
                             {%- endif -%}
                           </div>
+                          <div class="prod-btn text-center">
+                            <a href="{{ item.url }}" class="btn-custom btn-green text-center"> <span>View Blog</span> </a>
+                          </div>
                         </div>
-                        <div class="card__badge">
-                          <span class="badge color-background-1">{{ 'blogs.article.blog' | t }}</span>
-                        </div>
+                        
                       </div>
                     </div>
-                  </a>
+                 
                 {%- when 'page' -%}
-                  <a href="{{ item.url }}" class="card-wrapper">
+                 
                     <div class="card card--search card--soft card--text-only">
                       <div class="card__inner">
-                        <div class="card__content"><h2 class="card__text h3">{{ item.title | truncate: 50 | escape }}</h2></div>
-                        <div class="card__badge">
-                          <span class="badge color-background-1">{{ 'templates.search.page' | t }}</span>
+                        <div class="media media--cropped">
+                          <img
+                            src="{{ 'placeholder.jpg' | asset_url }}"
+                            class="img-fluid"
+                            loading="lazy"
+                            sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 130 | divided_by: 4 }}px, (min-width: 990px) calc((100vw - 130px) / 4), (min-width: 750px) calc((100vw - 120px) / 3), calc((100vw - 35px) / 2)"
+                            width="{{ item.image.src.width }}"
+                            height="{{ item.image.src.height }}"
+                            alt="{{ item.image.src.alt | escape }}"
+                        >
+                        </div>
+                        <div class="card__content"><span class="card-information__text h5">{{ item.title | truncate: 50 | escape }}</span></div>
+                        
+                      </div>
+                      <div class="card__content">
+                     
+                        <div class="prod-btn text-center">
+                          <a href="{{ item.url }}" class="btn-custom btn-green text-center"> <span>View Page</span> </a>
                         </div>
                       </div>
                     </div>
-                  </a>
+                 
               {%- endcase -%}
-            </li>
+            </div>
           {%- endfor -%}
-        </ul>
+        </div>
         {%- if paginate.pages > 1 -%}
           {% render 'pagination', paginate: paginate %}
+          
         {%- endif -%}
       </div>
     {% endpaginate %}
