--- a/sections/zigzag-content.liquid
+++ b/sections/zigzag-content.liquid
@@ -1,6 +1,6 @@
 <div class="zigzag-wrapper pattern-add">
   {% capture image_layout %}
-  <div class="col-lg-5">
+  <div class="col-lg-5 {% if section.settings.layout == 'right' %} order-2 {% endif %}">
     <div class="image">
       {% if section.settings.image != blank %}
       <img src="{{ section.settings.image | img_url:'master' }}" class="img-fluid" alt="{{ section.settings.heading }}">
@@ -13,7 +13,7 @@
       {% if section.settings.layout == 'left' %}
       {{ image_layout }}
       {% endif %}
-      <div class="col-lg-7">
+      <div class="col-lg-7 {% if section.settings.layout == 'right' %}order-1 {% endif %}">
         <div class="title-black text-center">
           {% if section.settings.heading != blank %}
           <h2 class="h2">{{ section.settings.heading }}</h2>
