--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -86,7 +86,7 @@
            {% comment %} {% render 'price', product: product_card_product, price_class: '' %} {% endcomment %}
         {% endif %} 
         <div class="prod-btn text-center">
-        <a href="{{ product_card_product.url | default: '#' }}" class="btn btn-green text-center"> View Product </a>
+        <a href="{{ product_card_product.url | default: '#' }}" class="btn-custom btn-green text-center"> <span>View Product</span> </a>
       </div>
       </div>
     </div>
